# glass-color-explainer

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/superpowers/plans/: 2026-06-11-colorant-mixing-lab.md
docs/superpowers/specs/: 2026-06-11-colorant-mixing-design.md
scripts/: check_catalog.mjs  check_data.mjs
src/: content.config.ts
src/components/: GlassMap.astro  Locator.astro
src/components/islands/: AlexandriteToggle.astro  LycurgusFlip.astro  MixingLab.svelte  SpectrumExplorer.astro  StrikingSlider.astro
src/content/concepts/: colloidal-color.md  color-in-glass.md  rare-earth-colorants.md  redox.md  selenium-ruby.md  silver-stain.md  stained-glass.md  transition-metal-colorants.md
src/data/: islands.json  map.json  optics.json
src/data/catalog/: bullseye.json  cim.json  double-helix.json  effetre.json  glass-alchemy.json  index.json  northstar.json  reichenbach.json  tag.json  vetrofond.json
src/layouts/: Base.astro
src/pages/: index.astro  mixing-lab.astro
src/pages/concepts/: [slug].astro
src/scripts/: optics-core.js
src/scripts/islands/: alexandrite.js  lycurgus.js  spectrum.js  striking.js
test/: check_catalog.test.mjs  check_data.test.mjs  optics-core.test.mjs
tools/catalog-sweep/: README.md  pyproject.toml  run.py
tools/catalog-sweep/catalog_sweep/: __init__.py  classify.py  config.py  emit.py  fetch.py  normalize.py  politeness.py  shopify.py  swatch.py
tools/catalog-sweep/config/: overrides.json  suppliers.toml
tools/catalog-sweep/tests/: test_classify.py
